@@ -533,11 +533,13 @@ extern void		cb_plex_warning (const size_t,
 					 const char *, ...) COB_A_FORMAT23;
 extern void		cb_plex_error (const size_t,
 				       const char *, ...) COB_A_FORMAT23;
+extern unsigned int	cb_plex_verify (const size_t, const enum cb_support,
+					const char *);
 extern void		configuration_warning (const char *, const int,
 					 const char *, ...) COB_A_FORMAT34;
 extern void		configuration_error (const char *, const int,
 					 const int, const char *, ...) COB_A_FORMAT45;
-extern char *	cb_get_strerror (void);
+extern char *		cb_get_strerror (void);
 
 extern unsigned int	cb_verify (const enum cb_support, const char *);
 
